--- a/sc.html
+++ b/sc.html
@@ -62,7 +62,8 @@
         <div class="row description">
           <p> Enter any css selector in the above text box in order to calculate it's specificity.</p>
           <p> You could try for example : <a data-rule="li.selected" href="#"> li.selected</a> or <a data-rule="#nav-header li" href="#"> #nav-header li</a> or <a data-rule="#nav-header li.selected" href="#"> #nav-header li.selected</a> to see the difference </p>
-        </div>
+          <p> This tools was forked from : https://github.com/keeganstreet/specificity.keegan.st </p>  
+      </div>
     </div>
 
     <div class="offscreen-container">
@@ -73,8 +74,6 @@
     <script src="js/lib/jquery-1.11.3.min.js" type="text/javascript"></script>
     <script src="js/specificity.js" type="text/javascript"></script>
     <script src="js/main.js"></script>
-    <script type="text/javascript">
-        
-    </script>
+
 </body>
 </html>
