--- a/sc.html
+++ b/sc.html
@@ -62,7 +62,7 @@
         <div class="row description">
           <p> Enter any css selector in the above text box in order to calculate it's specificity.</p>
           <p> You could try for example : <a data-rule="li.selected" href="#"> li.selected</a> or <a data-rule="#nav-header li" href="#"> #nav-header li</a> or <a data-rule="#nav-header li.selected" href="#"> #nav-header li.selected</a> to see the difference </p>
-          <p> This tools was forked from : https://github.com/keeganstreet/specificity.keegan.st </p>  
+          <p> This tool is based on : <a href="https://github.com/keeganstreet/specificity.keegan.st"> https://github.com/keeganstreet/specificity.keegan.st </a> </p>  
       </div>
     </div>
 
